fixed issue in username displaying on card and spacing of components on dashboard

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -8,6 +8,7 @@
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.4);*/
 /*  border-radius: 10px;
   padding: 0 5px;*/
+  margin: 75px 0;
 }
 
 .list-overflow-container {
