--- a/client/src/components/Gamelist/Gamelist.css
+++ b/client/src/components/Gamelist/Gamelist.css
@@ -13,7 +13,6 @@
   min-height: 60px;
   padding: 0 !important;
   box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.23);
-  margin-bottom: 75px;
   background-color: gainsboro;
   display: inline-block;
 }
